<resources>
    <string name="app_name">Fictioner</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_characters">Characters</string>
    <string name="title_chapters">Chapters</string>
    <string name="title_events">Events</string>
    <string name="title_locations">Locations</string>
    <string name="email">E-mail address</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed congue fringilla dolor. Sed tincidunt suscipit ligula, in scelerisque enim sagittis non. Curabitur ac augue id augue viverra finibus non sed ligula. Quisque sed magna at tortor vulputate imperdiet sed dictum libero. Sed sed lacus sit amet sem molestie suscipit non eget quam. Curabitur risus libero, finibus ac elit maximus, convallis feugiat velit. Integer libero arcu, condimentum ut tortor venenatis, aliquet mattis mi. Nam laoreet magna nec blandit varius. Integer id varius velit, at consectetur nisl. Nam erat sapien, pretium a consequat at, porttitor eget justo. Duis nec lacus quis orci lacinia ullamcorper id sit amet nulla. Donec ac mauris rhoncus, tempor justo in, facilisis lacus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Integer posuere non est a venenatis. Cras nisi ante, facilisis a facilisis auctor, cursus sit amet augue. Suspendisse potenti. In bibendum urna turpis, vel blandit elit pellentesque a. Vestibulum tincidunt faucibus pharetra. Etiam consectetur ullamcorper cursus. Sed efficitur a dui non mattis.</string>
    <string name="e_mail">E-mail</string>
    <string name="login_title">Fictioner</string>
    <string name="book_title_placeholder">Book Title</string>
    <string name="current_book">Current Book:</string>
    <string name="name">Name...</string>
    <string name="body">Body...</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
</resources>
