<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="presenter"
            type="se.hkr.fictioner.main.MainPresenter" />
    </data>

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.MainActivity">

        <TextView
            android:id="@+id/username_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200sp"
            android:text="@string/email"
            android:textSize="@dimen/login_text_size" />

        <EditText
            android:id="@+id/username_input"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_below="@+id/username_textview"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/login_margin"
            android:inputType="textWebEmailAddress"
            android:background="@android:color/darker_gray"
            android:text="@={presenter.username}" />

        <TextView
            android:id="@+id/password_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username_input"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/login_margin"
            android:text="@string/password"
            android:textSize="@dimen/login_text_size" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_below="@+id/password_textview"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/login_margin"
            android:background="@android:color/darker_gray"
            android:inputType="textPassword"
            android:text="@={presenter.password}" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_input"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/login_button"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:onClick="@{presenter::handleLoginButtonPress}"
                android:text="@string/log_in" />
            <Button
                android:id="@+id/register_button"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:text="@string/register"
                android:onClick="@{presenter::handleRegisterButtonPress}"
                />
        </LinearLayout>


    </RelativeLayout>
</layout>